# dds-micro-chat-c

./: .gitignore  CMakeLists.txt  README.md  chat_client.c  chat_client.h  discovery_constants.h  generate_type_support.sh  nic_config.h
idl_types/: chat.idl
